[gd_scene load_steps=25 format=2]

[ext_resource path="res://characters/bosses/base/BossBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/bosses/thunder_man/thunder_man.gd" type="Script" id=2]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManIdle.png" type="Texture" id=3]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManShoot.png" type="Texture" id=4]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManDash.png" type="Texture" id=5]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManJump.png" type="Texture" id=6]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManJumpShoot.png" type="Texture" id=7]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManTaunt.png" type="Texture" id=8]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManDashEffect.png" type="Texture" id=9]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManStrikePrep.png" type="Texture" id=10]
[ext_resource path="res://characters/bosses/thunder_man/scripts/thunder_man_state_machine.gd" type="Script" id=11]
[ext_resource path="res://characters/bosses/thunder_man/states/idle.gd" type="Script" id=12]
[ext_resource path="res://characters/bosses/thunder_man/states/move.gd" type="Script" id=13]
[ext_resource path="res://characters/bosses/thunder_man/states/charge.gd" type="Script" id=14]
[ext_resource path="res://characters/bosses/thunder_man/states/dash.gd" type="Script" id=15]
[ext_resource path="res://characters/bosses/thunder_man/states/shoot.gd" type="Script" id=16]
[ext_resource path="res://characters/bosses/thunder_man/states/jump.gd" type="Script" id=17]
[ext_resource path="res://characters/bosses/thunder_man/states/electric_strike.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 12 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 10, 12 )

[sub_resource type="SpriteFrames" id=3]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump_shoot",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.16
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("DashEffect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DashEffect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "strike_prep"
length = 1.85
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterSprites/AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSprites/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CharacterSprites/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 4, 3, 4, 3, 4, 3, 4, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterSprites/Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=6]
length = 1.25
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterSprites/AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSprites/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CharacterSprites/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 4, 3, 4, 2, 1, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterSprites/Sprite:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[node name="ThunderMan" instance=ExtResource( 1 )]
collision_layer = 0
script = ExtResource( 2 )
contact_damage = 6
buster_damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Area2D" parent="." index="1"]
visible = false

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 2 )

[node name="AnimatedSprite" parent="CharacterSprites" index="0"]
position = Vector2( 0, 0 )
frames = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="CharacterSprites" index="1"]
visible = false
texture = ExtResource( 8 )
offset = Vector2( 0, -4 )
hframes = 5

[node name="DashEffect" type="Sprite" parent="." index="3"]
visible = false
texture = ExtResource( 9 )
offset = Vector2( 0, -4 )
hframes = 2
frame = 1

[node name="AnimationEffects" type="AnimationPlayer" parent="." index="7"]
anims/dash_effect = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="8"]
pause_mode = 2
anims/strike_prep = SubResource( 5 )
anims/taunt = SubResource( 6 )

[node name="StateMachine" parent="." index="10"]
script = ExtResource( 11 )

[node name="Idle" parent="StateMachine" index="2"]
script = ExtResource( 12 )

[node name="Move" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 13 )

[node name="Charge" type="Node" parent="StateMachine" index="4"]
script = ExtResource( 14 )

[node name="Dash" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 15 )

[node name="Shoot" type="Node" parent="StateMachine" index="6"]
script = ExtResource( 16 )

[node name="Jump" type="Node" parent="StateMachine" index="7"]
script = ExtResource( 17 )
jump_speed = -380

[node name="ElectricStrike" type="Node" parent="StateMachine" index="9"]
script = ExtResource( 18 )

[node name="RayCast2D" type="RayCast2D" parent="." index="12"]
cast_to = Vector2( 64, 0 )
collision_mask = 2

[node name="Position2D" type="Position2D" parent="." index="13"]
position = Vector2( -24, -4 )

[node name="TimerCooldown" type="Timer" parent="." index="14"]
process_mode = 0
one_shot = true

[node name="TimerShootDelay" type="Timer" parent="." index="15"]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="TimerIdleDelay" type="Timer" parent="." index="16"]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="TimerElectricStrike" type="Timer" parent="." index="17"]
process_mode = 0
wait_time = 1.3
one_shot = true

[node name="TimerStrikePosition" type="Timer" parent="." index="18"]
process_mode = 0
wait_time = 1.1
one_shot = true

[connection signal="animation_finished" from="AnimationEffects" to="StateMachine" method="_on_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]
